# Smart-Image-Organizer

./: .codecov.yml  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TECH_STACK.md  dev-requirements.txt  fix_flake8.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yml  format.yml  publish.yml  python-app.yml  tests.yml
src/: ai_tagger.py  cli.py  exif_handler.py  file_organizer.py  geolocation.py
src/api/: auth.py  cache.py  client.py  main.py  rate_limiter.py
tests/: __init__.py  test_ai_tagger.py  test_cli.py  test_exif_handler.py  test_file_organizer.py  test_geolocation.py
